updates to components and css

--- a/client/src/components/css/Menu.css
+++ b/client/src/components/css/Menu.css
@@ -1,11 +1,13 @@
+/* the menu area needs to be white with color in the buttons */
+
 #menuContainer {
-  background-color: purple;
+  background-color: red;
   padding: 5px;
 }
 
-#menuButtons {
+#menuButtonAr {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-around;
   align-items: center;
 
