--- a/client/src/components/css/Footer.css
+++ b/client/src/components/css/Footer.css
@@ -12,6 +12,9 @@ footer {
   justify-content: space-around;
   align-items: center;
 
-  margin-left: 20px;
-  margin-right: 20px;
+  margin: 10px;
+  padding: 10px;
+
+
+  background-color: #222222;
 }
