--- a/client/src/components/css/Header.css
+++ b/client/src/components/css/Header.css
@@ -3,7 +3,7 @@ img {
 }
 
 header {
-  background-color: blue;
+  background-color: grey;
   height: 95vh;
   display: flex;
   flex-direction: column;
